# Mutation-frequency-calculator

./: .replit  README.md  app.py  check_stats.py  cleanup_orphaned_files.py  database_integrity_manager.py  file_integrity_check.py  file_integrity_monitor.py  fix_missing_files.py  gunicorn.conf.py  models.py  mutation_analyzer.py  overview.md  pyproject.toml  replit.md  restore_existing_files.py  startup_integrity_check.py  test_mutations.fasta
attached_assets/: Pasted-from-Bio-import-AlignIO-from-collections-import-Counter-import-csv-from-google-colab-import-files-1755164297000_1755164297003.txt
static/: adaptive_ui.js  dashboard.css  dashboard.js  file_cache.js  landing.css  landing.js  script.js  style.css  workspace.css  workspace.js
templates/: dashboard.html  index.html  results.html  workspace.html  workspace_old.html
uploads/: 6deb15ad-e60f-4ddd-a3d1-3718b78a0ae9_NSP2AConserved_set2022.fasta  878eca02-c4f0-45cc-9bbf-e1fa05223cee_NSP2Bconserved_set2022.fasta  ded99e3b-ed32-4116-a1f3-79cc6f61c79c_NSP1Conserved_set2022.fasta  mutation_analysis_results.csv  results_0a15e031-0fbe-4f68-a179-328365184a14.json  results_24b265ad-812d-4598-b16e-2dc7d47e523d.json  results_878eca02-c4f0-45cc-9bbf-e1fa05223cee.json  results_8f75d5ac-63ad-47f2-b922-d7168f65672a.pkl  results_ded99e3b-ed32-4116-a1f3-79cc6f61c79c_backup.json
